--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   logger: ^1.1.0
   google_fonts: ^3.0.1
   auto_size_text: ^3.0.0
+  firebase_core: ^1.20.1
+  firebase_auth: ^3.6.3
 
 dev_dependencies:
   flutter_test:
