--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   auto_size_text: ^3.0.0
   firebase_core: ^1.20.1
   firebase_auth: ^3.6.3
+  riverpod: ^1.0.3
+  flutter_easyloading: ^3.0.5
+
 
 dev_dependencies:
   flutter_test:
