--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,22 +4,17 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    {
+        "name": "Flutter",
+        "type": "dart",
+        "request": "launch",
+        "program": "lib/main.dart"
+    },
         {
             "name": "nuclear",
             "request": "launch",
             "type": "dart"
         },
-        {
-            "name": "nuclear (profile mode)",
-            "request": "launch",
-            "type": "dart",
-            "flutterMode": "profile"
-        },
-        {
-            "name": "nuclear (release mode)",
-            "request": "launch",
-            "type": "dart",
-            "flutterMode": "release"
-        }
+       
     ]
 }
