--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   liquid_pull_to_refresh: ^3.0.1
   toast: ^0.3.0
   http: ^0.13.5
+  cached_network_image: ^3.2.1
+  shimmer: ^2.0.0
 
 
 dev_dependencies:
