--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   http: ^0.13.5
   cached_network_image: ^3.2.1
   shimmer: ^2.0.0
+  cloud_firestore: ^3.4.5
 
 
 dev_dependencies:
@@ -73,8 +74,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+      - lib/assets/images/sample.jpg
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
